--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Labyrinthe-play</title>
-    <script type="text/javascript" src='app.js'></script>
-    <link href='index.css' rel='stylesheet'>
-</head>
-<body>
+    <script src="labyrinthes.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+    <link href="index.css" rel="stylesheet" />
+  </head>
+  <body>
+
+    <button onclick="affiche_lab()">New Labyrinthe</button>
+    <div id="grid-container">
     
-</body>
+    </div>
+  </body>
 </html>
