modif sur app.js + clear dic grid container pour pas ecraser

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <button onclick="affiche_lab()">New Labyrinthe</button>
+    <button onclick="randomOrNot()">New Labyrinthe</button>
     <div id="grid-container">
     
     </div>
