implementer la resolution DFS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <body>
 
     <button onclick="randomOrNot()">New Labyrinthe</button>
+    <br>
+    <button onclick="playDFS()">Play DFS</button>
     <div id="grid-container">
     
     </div>
