implementation : résoudre le labyrinthe par BFS

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button onclick="randomOrNot()">New Labyrinthe</button>
     <br>
     <button onclick="playDFS()">Play DFS</button>
+    <button onclick="playBFS()">Play BFS</button>
     <div id="grid-container">
     
     </div>
